# CFspider

./: .gitignore  README.md  add_encryption.js  build_encrypted.js  deep_obfuscate.js  pyproject.toml  test.py  test_antibot.py  test_api.py  translate.js  workers.js  workers_encrypted.js  workers_translated.js  x27cn-wrangler.toml  x27cn_encrypt.js  破皮版workers.js
.github/workflows/: build-browser.yml
cfspider/: __init__.py  ai_browser.py  ai_browser_v2.py  api.py  batch.py  browser.py  export.py  human_browser.py  session.py  stealth.py  workers_manager.py
cfspider-browser/: README.md  electron-builder.json  package-lock.json  package.json  vite.config.ts
cfspider-browser/electron/: main.ts  preload.ts
cfspider-browser/src/: App.tsx
cfspider-browser/src/components/AIChat/: AIChat.tsx  MessageList.tsx
cfspider-browser/src/components/Browser/: Browser.tsx  VirtualMouse.tsx
cfspider-browser/src/components/Settings/: SettingsModal.tsx
cfspider-browser/src/services/: ai.ts
cfspider-browser/src/store/: index.ts
cfspider/data/: __init__.py  dataframe.py  io.py
cfspider/x27cn/: __init__.py  __main__.py  name_gen.py  obfuscator.py  string_crypt.py
x27cn/: README.md  pyproject.toml
x27cn-pages/: _worker.js  index.html
x27cn/x27cn/: __init__.py  advanced.py  anti_crawl.py  cli.py  core.py
