[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x27cn"
version = "1.0.0"
description = "X27CN 代码混淆加密库 - Code obfuscation and encryption library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "CFspider", email = "cfspider@example.com"}
]
keywords = [
    "encryption",
    "obfuscation",
    "security",
    "encoding",
    "加密",
    "混淆"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/violettoolssite/CFspider"
Documentation = "https://github.com/violettoolssite/CFspider#x27cn-加密库"
Repository = "https://github.com/violettoolssite/CFspider"
Issues = "https://github.com/violettoolssite/CFspider/issues"

[tool.setuptools.packages.find]
where = ["."]

